@@ -36,7 +36,7 @@
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
   f08f7a153a9daf968edc3df3af0c370cf6124d90 2012071200 mingw32-gcc4.xml
-  06db4b622b4593da5a9c6a9a9eae387fd78174bb 2012021100 mingw32-gdb.xml
+  2aec3c75d5ccba91607e343bcc304f3baf24ae56 2012082700 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   84ba9fe58d5492be57bd8e41d10daa9fd8be4721 2012073100 mingw32-gettext.xml
   0df0573fbfc77ce5fbf9a4949a57e6e61c7492fa 2012073100 mingw32-gmp.xml
