@@ -1,3 +1,10 @@
+2012-08-27  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
+	Update & publish mingw32-gdb.
+
+	* mingw32/mingw32-gdb.xml: Update to 7.5-1.
+	* mingw32/issue.log: Updated accordingly.
+
 2012-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
 	Update & publish mingw32-make.
